Trying to fix card height

--- a/Angular Project/src/app/manager/manager.component.css
+++ b/Angular Project/src/app/manager/manager.component.css
@@ -1,4 +1,9 @@
-.card-body{
+.card{
+    margin-bottom: 10px;
+    height: 12rem;
+}
 
-    height: auto;
+#man-btn{
+    position: relative;
+    float: right;
 }
