--- a/Angular Project/src/app/manager/manager.component.html
+++ b/Angular Project/src/app/manager/manager.component.html
@@ -1,14 +1,19 @@
-<button class="btn btn-primary" [routerLink]="['/manageAnchors', manager.userID]">Manage Anchors</button>
+<button id="man-btn" class="btn btn-secondary" [routerLink]="['/manageAnchors', manager.userID]">Manage Anchors</button>
+<br/>
+<br/>
 <div *ngIf="manager">
-<div class="card" *ngFor="let anchor of myAnchors;let i = index;">
+<br/>
+  <div class="card " *ngFor="let anchor of myAnchors;let i = index;">
       <div class="card-header">
           <h4>{{anchor.userName }}</h4>
       </div>
       <div class="card-body bg-light ">
         <app-anchor [anchor]="this.anchor"></app-anchor>
       </div>
-  </div>
+    </div>
+    <br/>
 </div>
+
 
 <div class="container text-white" style="height:800px;">
   <div [ngSwitch]="myAnchors?.length">
