--- a/Angular Project/src/app/manager/manager.component.css
+++ b/Angular Project/src/app/manager/manager.component.css
@@ -1,8 +1,7 @@
 .card{
-    margin-bottom: 10px;
-    height: 12rem;
+    margin-bottom: 10rem;
+    
 }
-
 #man-btn{
     position: relative;
     float: right;
