--- a/Angular Project/src/app/manager/manager.component.html
+++ b/Angular Project/src/app/manager/manager.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <button class="btn btn-primary float-right" [routerLink]="['/manageAnchors', manager.userID]">Manage Anchors</button>
   <button class="btn btn-primary float-right" data-toggle="modal" data-target="#vehicleModal">Add Vehicles</button>
-  <button class="btn btn-primary float-right" data-toggle="modal" data-target="#equipmentModal">Add Equipment</button>
   <button class="btn btn-primary float-right" data-toggle="modal" data-target="#expertModal">Add Expert</button>
+  <button class="btn btn-primary float-right" data-toggle="modal" data-target="#equipmentModal">Add Equipment</button>
 </div>
 
 <div class="p-5">
@@ -82,7 +82,7 @@
 
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeVehicle()">Close</button>
-                <button type="button" class="btn btn-primary" (click)="addVehicle()">Add</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="addVehicle()">Add</button>
               </div>
             </form>
           </div>
@@ -127,7 +127,7 @@
 
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeEquipment()">Close</button>
-              <button type="button" class="btn btn-primary" (click)="addEquipment()">Add</button>
+              <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="addEquipment()">Add</button>
             </div>
           </form>
         </div>
@@ -159,7 +159,7 @@
             name is required</div>
 
           <div class="form-group">
-            <label for="equipmentType" class="form-field-labels">Equipment Type: </label>
+            <label for="equipmentType" class="form-field-labels">Expert Topic: </label>
             <input type="text" formControlName="expertTopic" class="form-control" [(ngModel)]="expert.expertTopic" />
           </div>
 
@@ -169,7 +169,7 @@
 
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeExpert()">Close</button>
-            <button type="button" class="btn btn-primary" (click)="addExpert()">Add</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="addExpert()">Add</button>
           </div>
         </form>
       </div>
