Changed vehicle type to vehicle make

--- a/Angular Project/src/app/manager/manager.component.html
+++ b/Angular Project/src/app/manager/manager.component.html
@@ -57,7 +57,7 @@
                 name is required</div>
 
               <div class="form-group">
-                <label for="vehicleType" class="form-field-labels">Vehicle Type: </label>
+                <label for="vehicleType" class="form-field-labels">Vehicle Make: </label>
                 <input type="text" formControlName="vehicleType" class="form-control" [(ngModel)]="vehicle.vehicleType" />
               </div>
 
