button colors changed

--- a/Angular Project/src/app/manager/manager.component.html
+++ b/Angular Project/src/app/manager/manager.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <button class="btn btn-primary float-right" [routerLink]="['/manageAnchors', manager.userID]">Manage Anchors</button>
-  <button class="btn btn-primary float-right" data-toggle="modal" data-target="#vehicleModal">Add Vehicles</button>
-  <button class="btn btn-primary float-right" data-toggle="modal" data-target="#expertModal">Add Expert</button>
-  <button class="btn btn-primary float-right" data-toggle="modal" data-target="#equipmentModal">Add Equipment</button>
+  <button class="btn btn-primary float-right mr-3" [routerLink]="['/manageAnchors', manager.userID]">Manage Anchors</button>
+  <button class="btn btn-light float-right mr-1" data-toggle="modal" data-target="#vehicleModal">Add Vehicles</button>
+  <button class="btn btn-warning float-right mr-1" data-toggle="modal" data-target="#expertModal">Add Expert</button>
+  <button class="btn btn-info float-right mr" data-toggle="modal" data-target="#equipmentModal">Add Equipment</button>
 </div>
 
 <div class="p-5">
