--- a/Angular Project/src/app/account-creation/account-creation.component.css
+++ b/Angular Project/src/app/account-creation/account-creation.component.css
@@ -1,18 +1,41 @@
+
+.overlay {
+  background: black;
+  position: absolute;
+  opacity: 0.4;
+  width: 100vw;
+  z-index: 1;
+  height: 100vh;
+}
+
+#everything {
+  background-image: url("./../../assets/newspaper.jpg");
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+
+}
+
+#content {
+  position: relative;
+  z-index: 10;
+}
+
+
 .background{
-    background-repeat: no-repeat; 
-    height: 100%;
+  background-repeat: no-repeat;
+  height: 100%;
   }
 
-  img{
-    opacity: 0.7;
-    height: 800px;
-    width: 2000px;
-  }
 
-  .container{
+#border-element {
+  border-radius: 5px;
+  width: 20em;
+}
+
+  /* .container{
       position: absolute;
       top: 150px;
       left: 500px;
-     
-      
-  }
+
+  } */
