--- a/Angular Project/src/app/account-creation/account-creation.component.html
+++ b/Angular Project/src/app/account-creation/account-creation.component.html
@@ -1,91 +1,87 @@
-<div class="background">
-  <img src="./../../assets/room2.jpg">
-  <div class="container" *ngIf="account">
-  <div class="row">
-    <div class="col-md-8">
-      <div class="card">
-        <div class="card-header">
-          Account Information
-        </div>
-        <div class="card-body">
 
-          <div id="login-forms" class="d-flex justify-content-center">
-            <form [formGroup]="form" (ngSubmit)="createAccount()">
+<div class="overlay"></div>
 
+<div id="everything">
+  <div id="content">
+      <div class="container" *ngIf="account">
+          <br><br>
+          <h1 class="text-center text-light mb-3">Register</h1>
+                <div id="login-forms" class="d-flex justify-content-center">
+                  <form [formGroup]="form" (ngSubmit)="createAccount()" id="border-element" class="border border-white">
+                      <div class="m-4">
+                          <div class="form-group">
+                              <span class="text-danger asterisk">*</span>
+                              <label for="name" class="form-field-labels text-light">Name</label>
+                              <input type="text" formControlName="name" class="form-control" [(ngModel)]="account.userName" />
 
-              <div class="form-group">
-                <span class="text-danger asterisk">*</span>
-                <label for="name" class="form-field-labels">Name</label>
-                <input type="text" formControlName="name" class="form-control" [(ngModel)]="account.userName" />
+                            </div>
 
-              </div>
+                            <div class="text-danger" *ngIf="form.controls['name'].touched && form.controls['name'].errors?.required">Name
+                              is required</div>
 
-              <div class="text-danger" *ngIf="form.controls['name'].touched && form.controls['name'].errors?.required">Name
-                is required</div>
+                            <div class="form-group">
+                              <span class="text-danger asterisk">*</span>
+                              <label for="email" class="form-field-labels text-light">Email</label>
+                              <input type="text" formControlName="email" class="form-control" [(ngModel)]="account.email" />
 
-              <div class="form-group">
-                <span class="text-danger asterisk">*</span>
-                <label for="email" class="form-field-labels">Email</label>
-                <input type="text" formControlName="email" class="form-control" [(ngModel)]="account.email" />
+                            </div>
+                            <div class="text-danger" *ngIf="form.controls['email'].touched && form.controls['email'].errors?.required">Email
+                              is required</div>
+                            <div class="text-danger" *ngIf="form.controls['email'].touched && form.controls['email'].errors?.email">Must
+                              be
+                              an Email</div>
+                            <div class="text-danger" *ngIf="form.controls['email'].touched && form.controls['email'].errors?.min">Must
+                              be
+                              5 characters long</div>
+                            <div class="text-danger" *ngIf="form.controls['email'].touched && form.controls['email'].errors?.max">Must
+                              be
+                              shorter than 45 characters</div>
+                            <div class="form-group">
+                              <span class="text-danger asterisk">*</span>
+                              <label for="password" class="form-field-labels text-light">Password</label>
+                              <input type="password" formControlName="password" class="form-control" />
 
-              </div>
-              <div class="text-danger" *ngIf="form.controls['email'].touched && form.controls['email'].errors?.required">Email
-                is required</div>
-              <div class="text-danger" *ngIf="form.controls['email'].touched && form.controls['email'].errors?.email">Must
-                be
-                an Email</div>
-              <div class="text-danger" *ngIf="form.controls['email'].touched && form.controls['email'].errors?.min">Must
-                be
-                5 characters long</div>
-              <div class="text-danger" *ngIf="form.controls['email'].touched && form.controls['email'].errors?.max">Must
-                be
-                shorter than 45 characters</div>
-              <div class="form-group">
-                <span class="text-danger asterisk">*</span>
-                <label for="password" class="form-field-labels">Password</label>
-                <input type="password" formControlName="password" class="form-control" />
-
-              </div>
-              <div class="text-danger" *ngIf="form.controls['password'].touched && form.controls['password'].errors?.required">Password
-                is required</div>
-              <div class="text-danger" *ngIf="form.controls['password'].touched && form.controls['password'].errors?.min">Password
-                must be at least 8 characters</div>
-              <div class="text-danger" *ngIf="passCheck">Passwords must match</div>
-              <div class="form-group">
-                <span class="text-danger asterisk">*</span>
-                <label for="confirmPassword" class="form-field-labels">Confirm Password</label>
-                <input type="password" formControlName="confirmPassword" class="form-control" [(ngModel)]="account.pass" />
-              </div>
-              <div class="text-danger" *ngIf="form.controls['confirmPassword'].touched && form.controls['confirmPassword'].errors?.required">Password
-                is required</div>
-              <div class="text-danger" *ngIf="form.controls['confirmPassword'].touched && form.controls['confirmPassword'].errors?.min">Password
-                must be at least 8 characters</div>
+                            </div>
+                            <div class="text-danger" *ngIf="form.controls['password'].touched && form.controls['password'].errors?.required">Password
+                              is required</div>
+                            <div class="text-danger" *ngIf="form.controls['password'].touched && form.controls['password'].errors?.min">Password
+                              must be at least 8 characters</div>
+                            <div class="text-danger" *ngIf="passCheck">Passwords must match</div>
+                            <div class="form-group">
+                              <span class="text-danger asterisk">*</span>
+                              <label for="confirmPassword" class="form-field-labels text-light">Confirm Password</label>
+                              <input type="password" formControlName="confirmPassword" class="form-control" [(ngModel)]="account.pass" />
+                            </div>
+                            <div class="text-danger" *ngIf="form.controls['confirmPassword'].touched && form.controls['confirmPassword'].errors?.required">Password
+                              is required</div>
+                            <div class="text-danger" *ngIf="form.controls['confirmPassword'].touched && form.controls['confirmPassword'].errors?.min">Password
+                              must be at least 8 characters</div>
 
 
-              <div class="form-group">
-                <span class="text-danger asterisk">*</span>
-                <label for="accType" class="form-field-labels">Account Type</label>
-                <select type="text" formControlName="accType" class="form-control" [(ngModel)]="account.typeFlag">
-                  <option value=1>Anchor</option>
-                  <option value=0>Manager</option>
-                </select>
+                            <div class="form-group">
+                              <span class="text-danger asterisk">*</span>
+                              <label for="accType" class="form-field-labels text-light">Account Type</label>
+                              <select type="text" formControlName="accType" class="form-control" [(ngModel)]="account.typeFlag">
+                                <option value=1>Anchor</option>
+                                <option value=0>Manager</option>
+                              </select>
 
-              </div>
+                            </div>
 
-              <div class="text-danger" *ngIf="form.controls['accType'].touched && form.controls['accType'].errors?.required">Account Type
-                is required</div>
+                            <div class="text-danger" *ngIf="form.controls['accType'].touched && form.controls['accType'].errors?.required">Account Type
+                              is required</div>
 
-            </form>
-          </div>
-        </div>
+                              <div class="d-flex justify-content-center">
+                                  <div class="form-group">
+                                      <button [disabled]="form.invalid" class="btn btn-success mt-3" type="button" (click)="createAccount()">
+                                          Create My Account
+                                        </button>
+                                  </div>
+                                </div>
+                      </div>
+                  </form>
+                </div>
+
       </div>
-      <br />
-      <button [disabled]="form.invalid" class="btn btn-lg btn-success btn-block" type="button" (click)="createAccount()">
-        Create Account
-      </button>
-    </div>
   </div>
-  
-</div>
-<br />
 
