--- a/Angular Project/src/app/landingpage/landingpage.component.html
+++ b/Angular Project/src/app/landingpage/landingpage.component.html
@@ -16,7 +16,7 @@
 
         <div class="col-md-3">
           <div class="text-center">
-              <button class="btn-lg btn-outline-light" [routerLink]="['/register']">Create Account</button>
+              <button class="btn-lg btn-outline-light" [routerLink]="['/register']">Register</button>
           </div>
         </div>
         <div class="col-md-3"></div>
