--- a/Angular Project/src/app/login/login.component.html
+++ b/Angular Project/src/app/login/login.component.html
@@ -1,26 +1,32 @@
-<div class="background">
-<h2 >Welcome to Anchor Management</h2>
-  <div class="container">
-      <span>
-            <div id="login-forms" class="d-flex justify-content-center">
-              <form [formGroup]="form" (ngSubmit)="login()">
-                <div class="form-group">
-                  <label for="email" class="form-field-labels">Email</label>
-                  <input type="text" formControlName="email" class="form-control form-control-lg" [(ngModel)]="email" />
-                </div>
-                <div class="text-danger" *ngIf="loginFailed">Incorrect Username and/or Password</div>
-                <div class="form-group">
-                  <label for="password" class="form-field-labels">Password</label>
-                  <input type="password" (keydown.enter)="login()" formControlName="password" class="form-control form-control-lg col-lg-20" [(ngModel)]="pass" />
-                </div>
-                <div class="d-flex justify-content-center">
-                  <div class="form-group">
-                    <button class="btn btn-lg btn-success btn-block" type="button" (click)="login()" [disabled]="form.invalid">Login</button>
-                  </div>
-                </div>
-              </form>
+<div class="overlay"></div>
+<div id="everything">
+  <div id="content" class="container">
+    <br><br><br><br>
+    <h1 class="text-center text-light mb-3">Login</h1>
+    <!-- <div class="container"> -->
+    <!-- <span> -->
+    <div id="login-forms" class="d-flex justify-content-center">
+      <form [formGroup]="form" (ngSubmit)="login()" id="border-element" class="border border-white">
+        <div class="m-4">
+          <div class="form-group">
+            <label for="email" class="form-field-labels text-light">Email</label>
+            <input type="text" formControlName="email" class="form-control form-control-lg" [(ngModel)]="email" />
+          </div>
+          <div class="text-danger" *ngIf="loginFailed">Incorrect Username and/or Password</div>
+          <div class="form-group">
+            <label for="password" class="form-field-labels text-light">Password</label>
+            <input type="password" (keydown.enter)="login()" formControlName="password" class="form-control form-control-lg col-lg-20"
+              [(ngModel)]="pass" />
+          </div>
+          <div class="d-flex justify-content-center">
+            <div class="form-group">
+              <button class="btn btn-lg btn-success btn-block" type="button" (click)="login()" [disabled]="form.invalid">Login</button>
             </div>
-          </span>
+          </div>
+        </div>
+      </form>
     </div>
+    <!-- </span> -->
+    <!-- </div> -->
+  </div>
 </div>
-
