--- a/Angular Project/src/app/manager/manager.component.html
+++ b/Angular Project/src/app/manager/manager.component.html
@@ -11,13 +11,13 @@
     <div id="accordion">
       <div class="card" *ngFor="let anchor of myAnchors; let i = index;">
         <div class="card-header" id="headingOne">
-          <h5 class="mb-0">
+          <!-- <h5 class="mb-1"> -->
             <!-- try to use index for index based attributes like data-target  -->
             <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
               aria-controls="collapseOne">
               {{anchor.userName}}
             </button>
-          </h5>
+          <!-- </h5> -->
         </div>
 
         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
