--- a/Angular Project/src/app/manager/manager.component.css
+++ b/Angular Project/src/app/manager/manager.component.css
@@ -1,8 +1,12 @@
 .card{
     margin-bottom: 10rem;
-    
+
 }
 #man-btn{
     position: relative;
     float: right;
+}
+
+.btn-add {
+  width: 12rem;
 }
