--- a/Angular Project/src/app/login/login.component.css
+++ b/Angular Project/src/app/login/login.component.css
@@ -21,7 +21,7 @@
 }
 
 #everything {
-  background-image: url("./../../assets/interview.jpg");
+  background-image: url("./../../assets/newspaper.jpg");
   height: 100vh;
   width: 100vw;
   background-size: cover;
