navbar dropdown changed

--- a/Angular Project/src/app/navbar/navbar.component.html
+++ b/Angular Project/src/app/navbar/navbar.component.html
@@ -4,7 +4,22 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarToggle">
+
+    <div class="dropdown show">
+        <a class="btn btn-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown link
+        </a>
+
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="javascript:void(0);" aria-haspopup="true" aria-expanded="false" (click)="navToHome()">Homepage</a>
+          <a class="dropdown-item" href="javascript:void(0);" aria-haspopup="true" aria-expanded="false" (click)="navToProfile()">Profile</a>
+          <a class="dropdown-item" href="javascript:void(0);" aria-haspopup="true" aria-expanded="false" (click)="navToCal()">Calendar</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#" aria-haspopup="true" aria-expanded="false" (click)="logout()">Logout</a>
+        </div>
+      </div>
+
+    <!-- <div class="collapse navbar-collapse" id="navbarToggle">
     <div class="float-right">
     <div class="row">
         <a class="nav-link" href="javascript:void(0);" aria-haspopup="true" aria-expanded="false" (click)="navToHome()">Homepage</a>
@@ -19,5 +34,5 @@
         <a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false" (click)="logout()">Logout</a>
       </div>
     </div>
-    </div>
+    </div> -->
   </nav>
