--- a/Angular Project/src/app/manager/manager.component.html
+++ b/Angular Project/src/app/manager/manager.component.html
@@ -1,5 +1,5 @@
 <!-- <div class="container"> -->
-  <!-- <div class="row">
+<!-- <div class="row">
     <div class="col-lg-2">
 
     </div>
@@ -38,12 +38,13 @@
 
 
 <!-- <div class="justify-content-center"> -->
-    <div class="d-flex flex-row justify-content-around m-5">
-        <button class="btn btn-primary  btn-lg btn-add" [routerLink]="['/manageAnchors', manager.userID]">Manage Anchors</button>
-        <button class="btn btn-dark btn-lg btn-add" data-toggle="modal" data-target="#vehicleModal">Add Vehicles</button>
-        <button class="btn btn-warning btn-lg btn-add" data-toggle="modal" data-target="#expertModal">Add Expert</button>
-        <button class="btn btn-info btn-lg btn-add" data-toggle="modal" data-target="#equipmentModal">Add Equipment</button>
-    </div>
+<div class="d-flex flex-row justify-content-around m-5">
+  <button class="btn btn-primary  btn-lg btn-add" [routerLink]="['/manageAnchors', manager.userID]">Manage Anchors</button>
+  <button class="btn btn-dark btn-lg btn-add" data-toggle="modal" data-target="#vehicleModal">Add Vehicles</button>
+  <button class="btn btn-warning btn-lg btn-add" data-toggle="modal" data-target="#expertModal">Add Expert</button>
+  <button class="btn btn-info btn-lg btn-add" data-toggle="modal" data-target="#equipmentModal">Add Equipment</button>
+  <button class="btn btn-info btn-lg btn-add" data-toggle="modal" data-target="#storyModal">Add Story</button>
+</div>
 <!-- </div> -->
 
 
@@ -138,7 +139,7 @@
           <div class="modal-body">
             <form [formGroup]="form" (ngSubmit)="addEquipment()">
               <div class="form-group">
-                <label for="equipmentName" class="form-field-labels">Equipement Name: </label>
+                <label for="equipmentName" class="form-field-labels">Equipment Name: </label>
                 <input type="text" formControlName="equipmentName" class="form-control" [(ngModel)]="equipment.equipName" />
               </div>
 
@@ -165,45 +166,117 @@
       </div>
       <br />
     </div>
-  <!-- </div> -->
+    <!-- </div> -->
 
 
 
-  <div class="modal fade" id="expertModal" tabindex="-1" role="dialog" aria-labelledby="expertModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="expertModalLabel">Add Expert</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form [formGroup]="form" (ngSubmit)="addExpert()">
-            <div class="form-group">
-              <label for="expertName" class="form-field-labels">Expert Name: </label>
-              <input type="text" formControlName="expertName" class="form-control" [(ngModel)]="expert.expertName" />
-            </div>
+    <div class="modal fade" id="expertModal" tabindex="-1" role="dialog" aria-labelledby="expertModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="expertModalLabel">Add Expert</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form [formGroup]="form" (ngSubmit)="addExpert()">
+              <div class="form-group">
+                <label for="expertName" class="form-field-labels">Expert Name: </label>
+                <input type="text" formControlName="expertName" class="form-control" [(ngModel)]="expert.expertName" />
+              </div>
 
-            <div class="text-danger mb-2" *ngIf="form.controls['expertName'].touched && form.controls['expertName'].errors?.required">Expert
-              name is required
-            </div>
+              <div class="text-danger mb-2" *ngIf="form.controls['expertName'].touched && form.controls['expertName'].errors?.required">Expert
+                name is required
+              </div>
 
-            <div class="form-group">
-              <label for="equipmentType" class="form-field-labels">Expert Topic: </label>
-              <input type="text" formControlName="expertTopic" class="form-control" [(ngModel)]="expert.expertTopic" />
-            </div>
+              <div class="form-group">
+                <label for="equipmentType" class="form-field-labels">Expert Topic: </label>
+                <input type="text" formControlName="expertTopic" class="form-control" [(ngModel)]="expert.expertTopic" />
+              </div>
 
-            <div class="text-danger mb-2" *ngIf="form.controls['expertTopic'].touched && form.controls['expertTopic'].errors?.required">Expert
-              topic is required</div>
+              <div class="text-danger mb-2" *ngIf="form.controls['expertTopic'].touched && form.controls['expertTopic'].errors?.required">Expert
+                topic is required</div>
 
 
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeExpert()">Close</button>
-              <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="addExpert()">Add</button>
-            </div>
-          </form>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeExpert()">Close</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="addExpert()">Add</button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+
+
+    <div class="modal fade" id="storyModal" tabindex="-1" role="dialog" aria-labelledby="storyModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="storyModalLabel">Add Story</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form [formGroup]="form" (ngSubmit)="addStory()">
+              <div class="form-group">
+                <label for="storyName" class="form-field-labels">Story Name: </label>
+                <input type="text" formControlName="storyName" class="form-control" [(ngModel)]="story.storyTopic" />
+              </div>
+
+              <div class="text-danger mb-2" *ngIf="form.controls['storyName'].touched && form.controls['storyName'].errors?.required">Story
+                name is required</div>
+
+              <div class="form-group">
+                <label for="storyDescription" class="form-field-labels">Story Description: </label>
+                <textarea formControlName="storyDescription" class="form-control" [(ngModel)]="story.description"></textarea>
+              </div>
+
+              <div class="text-danger mb-2" *ngIf="form.controls['storyDescription'].touched && form.controls['storyDescription'].errors?.required">Story
+                description is required</div>
+
+              <div class="form-group">
+                <label for="storyDate" class="form-field-labels">Story Date: </label>
+                <input type="date" formControlName="storyDate" class="form-control" [(ngModel)]="story.storyDate" />
+              </div>
+
+              <div class="text-danger mb-2" *ngIf="form.controls['storyDate'].touched && form.controls['storyDate'].errors?.required">Story
+                date is required</div>
+
+              <div class="form-group">
+                <label for="storyStart" class="form-field-labels">Story Start Time: </label>
+                <input type="time" formControlName="storyStart" class="form-control" [(ngModel)]="story.startTime" />
+              </div>
+
+              <div class="text-danger mb-2" *ngIf="form.controls['storyStart'].touched && form.controls['storyStart'].errors?.required">Story
+                start time is required</div>
+
+              <div class="form-group">
+                <label for="storyEnd" class="form-field-labels">Story End Time: </label>
+                <input type="date" formControlName="storyEnd" class="form-control" [(ngModel)]="story.endTime" />
+              </div>
+
+              <div class="text-danger mb-2" *ngIf="form.controls['storyEnd'].touched && form.controls['storyEnd'].errors?.required">Story
+                date is required</div>
+
+              <div class="form-group">
+                <label for="storyPoints" class="form-field-labels">Story Points: </label>
+                <input type="number" formControlName="storyPoints" class="form-control" [(ngModel)]="story.points" />
+              </div>
+
+              <div class="text-danger mb-2" *ngIf="form.controls['storyPoints'].touched && form.controls['storyPoints'].errors?.required">Story
+                points is required</div>
+
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeStory()">Close</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="addStory()">Add</button>
+              </div>
+            </form>
+          </div>
+
+        </div>
+      </div>
+      <br />
+    </div>
