--- a/Angular Project/src/app/matable/matable.component.css
+++ b/Angular Project/src/app/matable/matable.component.css
@@ -1,6 +1,6 @@
-.background{
+/* .background{
     box-sizing: border-box;
     background-color: #52658F !important;
     height: 1000px;
-    
-  }
+
+  } */
