--- a/Angular Project/src/styles.css
+++ b/Angular Project/src/styles.css
@@ -1,10 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-color-grey {
+/* color-grey {
   background-color: #52658f;
 }
 
 html {
   background-color: #52658f;
-}
+} */
