--- a/Angular Project/src/app/homepage/homepage.component.css
+++ b/Angular Project/src/app/homepage/homepage.component.css
@@ -16,10 +16,10 @@ h1{
 
 } */
 
-#header-text{
+/* #header-text{
   color: dodgerblue;
   font-family: "Nunito";
-}
+} */
 
 #username{
   font-size: 24px;
