--- a/Angular Project/src/app/manager/manager.component.css
+++ b/Angular Project/src/app/manager/manager.component.css
@@ -1,5 +1,5 @@
 .card{
-    margin-bottom: 10rem;
+    margin-bottom: 5rem;
 
 }
 #man-btn{
@@ -7,6 +7,34 @@
     float: right;
 }
 
+/* .btn-blue:hover {
+  width: 12rem;
+  color: #009eff;
+  background-color: #fff;
+  border-color: #009eff;
+}
+
 .btn-add {
   width: 12rem;
+  background: #17252A;
+  color: #DEF2F1;
+  border-color: #17252A;
+  font-family: "Nunito";
+} */
+
+.very-light-blue {
+  color: #DEF2F1;
+}
+
+.btn-add {
+  width: 12rem;
+  color: #DEF2F1;
+}
+
+/* .card-header {
+  background-color: #3AAFA9;
+} */
+
+.card-header {
+  background-color: #2B7A78;
 }
