--- a/Angular Project/src/app/matable/matable.component.html
+++ b/Angular Project/src/app/matable/matable.component.html
@@ -2,11 +2,11 @@
 <div class="background">
 <div *ngIf="manager">
 <div class="p-5">
-  <div class="container col-xs-6 text-white p-6">
+  <div class="container col-xs-6 p-6">
     <h2 class="sub-header">My Anchors</h2>
     <div [ngSwitch]="myAnchors?.length">
       <div *ngSwitchCase=0>
-        No Accounts Found.
+        You do not have any anchors
       </div>
       <table *ngSwitchDefault class="table table-striped table-condensed">
         <thead>
@@ -26,7 +26,7 @@
             </td>
             <td>
               {{account.points}}
-              <button (click)="removeAnchor(i)" class="btn btn-danger font-weight-bold text-white float-right w-25">Remove</button>
+              <button (click)="removeAnchor(i)" class="btn btn-danger font-weight-bold float-right w-25">Remove</button>
             </td>
           </tr>
         </tbody>
@@ -34,11 +34,11 @@
     </div>
   </div>
   <div class="p-5">
-  <div class="container col-xs-6 text-white">
+  <div class="container col-xs-6">
     <h2 class="sub-header">Available Anchors</h2>
     <div [ngSwitch]="availableAnchors?.length">
       <div *ngSwitchCase=0>
-        No Accounts Found.
+        No available anchors
       </div>
       <table *ngSwitchDefault class="table">
         <thead>
@@ -58,7 +58,7 @@
             </td>
             <td>
               {{account.points}}
-              <button (click)="addAnchor(i)" class="btn btn-success font-weight-bold text-white float-right w-25">Add</button>
+              <button (click)="addAnchor(i)" class="btn btn-success font-weight-bold float-right w-25">Add</button>
             </td>
           </tr>
         </tbody>
@@ -67,7 +67,7 @@
   </div>
   <hr/>
   <div class="p-4">
-    <button class="btn btn-primary font-weight-bold text-white float-right w-25" [routerLink]="['/home', manager.userID]">Return
+    <button class="btn btn-primary font-weight-bold float-right w-25" [routerLink]="['/home', manager.userID]">Return
       to Dashboard</button>
   </div>
 </div>
