--- a/Angular Project/src/app/story/story.component.css
+++ b/Angular Project/src/app/story/story.component.css
@@ -47,8 +47,8 @@
   } */
 
   #card-head {
-    color: #DEF2F1;
-    background: #17252A;
+    color: #17252A;
+    background: #DEF2F1;
   }
 
   .very-light-blue {
