--- a/Angular Project/src/app/manager/manager.component.css
+++ b/Angular Project/src/app/manager/manager.component.css
@@ -42,7 +42,7 @@
 }
 
 .card-body {
-  background-color: #DEF2F1;
+  background-color: #17252A;
 }
 
 
@@ -51,5 +51,6 @@
 } */
 
 .card-header {
-  background-color: #2B7A78;
+  background-color: #DEF2F1;
+  color: #17252A;
 }
