--- a/Angular Project/src/app/story/story.component.css
+++ b/Angular Project/src/app/story/story.component.css
@@ -1,56 +1,28 @@
-.maincard{
-    height: 10rem;
-    width: 60rem;
 
-    transform-style:preserve-3d;
-    -webkit-transition: transform 1.5s; /* Safari and Chrome */
-    transition: transform 1.5s;
-    position: relative;
-    z-index:1;
-
-  }
-  .front{
-    backface-visibility: hidden;
-    text-align: center;
-    font-family: Helvetica;
-    position: relative;
-    z-index: 1;
-  }
-  .back{
-    position: relative;
-    background-color: #999999;
-    backface-visibility: hidden;
-
-    color: #fff;
-    font-family: Helvetica;
-    z-index: 10;
-
-    /* rotating the back face of the card */
-    -ms-transform: rotateY(-180deg); /* IE 9 */
-    -webkit-transform: rotateY(-180deg); /* Safari */
-    transform: rotateY(-180deg);
-  }
-
-  .maincard-wrapper {
-    perspective:800px;
-  }
-
-  .maincard:hover {
-    position: relative;
-    z-index: 11;
-    -ms-transform: rotateY(-180deg); /* IE 9 */
-    -webkit-transform: rotateY(-180deg); /* Safari Chrome */
-    transform: rotateY(-180deg);
-  }
   /* .card{
     color: lightblue;
   } */
 
   #card-head {
-    color: #17252A;
-    background: #DEF2F1;
+    background: #3AAFA9;
   }
 
+
+  /* .card {
+    border-color: #000000;
+  } */
+
+  .storycard {
+    border-color: #3AAFA9;
+    border-bottom: none;
+  }
+
+
+
+  .btn-primary {
+    background-color: #3AAFA9;
+    color: #FFFFFF;
+  }
   .very-light-blue {
     color: #DEF2F1;
   }
@@ -58,4 +30,3 @@
   .kinda-light-blue {
     background: #17252A;
   }
-  /* 2B7A78 */
