--- a/Angular Project/src/app/story/story.component.html
+++ b/Angular Project/src/app/story/story.component.html
@@ -1,10 +1,10 @@
-<div class="container-fluid" *ngIf="vehicles && experts && equipment">
-  <div class="card">
+<div class="mt-3" *ngIf="vehicles && experts && equipment">
+  <div class="storycard card">
     <div class="card-header clearfix" id="card-head">
-      <h5 class="card-title"> {{story.storyTopic}} </h5>
+      <h4 class="card-title text-light"> {{story.storyTopic}} </h4>
     </div>
     <div class="card-body text-dark">
-      <label class="">Details</label>
+      <label class="">Story Details</label>
       <ul>
         <li>
           <p class="card-text">Date: {{story.storyDate}}</p>
@@ -15,31 +15,36 @@
         </li>
 
         <li>
-          <p class="card-text">Description:  {{story.description}}</p>
+          <p class="card-text">Description: {{story.description}}</p>
         </li>
       </ul>
       <div class="row">
         <div class="col-md-4">
-          <div class="card kinda-light-blue very-light-blue mt-4" style="width: 18rem;">
-            <div class="card-header text-white">
-              Vehicles
-              <button type="button" class="btn btn-primary float-right" [routerLink]="['/manageVehicles', story.storyID]">Edit</button>
-            </div>
-            <div *ngIf="vehicles.length">
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item" *ngFor="let vehicle of vehicles">{{ vehicle.vehicleName }} </li>
-              </ul>
-            </div>
-            <div *ngIf="!vehicles.length">
-              <p>There are no vehicles for this story.</p>
+          <div class="card card-head mt-4" style="width: 18rem;">
+            <div class="card-header">
+              <div class="d-flex justify-content-between">
+                <h5>Vehicles</h5>
+                <button type="button" class="btn btn-primary" [routerLink]="['/manageVehicles', story.storyID]">Edit</button>
+              </div>
             </div>
           </div>
+          <div *ngIf="vehicles.length">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item" *ngFor="let vehicle of vehicles">{{ vehicle.vehicleName }} </li>
+            </ul>
+          </div>
+          <div *ngIf="!vehicles.length">
+            <p class="text-center">There are no vehicles for this story.</p>
+          </div>
         </div>
+
         <div class="col-md-4">
-          <div class="card kinda-light-blue very-light-blue mt-4" style="width: 18rem;">
-            <div class="card-header text-white">
-              Experts
-              <button type="button" class="btn btn-primary float-right" [routerLink]="['/manageExperts', story.storyID]">Edit</button>
+          <div class="card card-head mt-4" style="width: 18rem;">
+            <div class="card-header ">
+              <div class="d-flex justify-content-between">
+                <h5>Experts</h5>
+                <button type="button" class="btn btn-primary" [routerLink]="['/manageExperts', story.storyID]">Edit</button>
+              </div>
             </div>
             <div *ngIf="experts.length">
               <ul class="list-group list-group-flush">
@@ -49,29 +54,30 @@
               </ul>
             </div>
             <div *ngIf="!experts.length">
-              <p>There are no experts for this story.</p>
+              <p class="text-center">There are no experts for this story.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card kinda-light-blue very-light-blue mt-4" style="width: 18rem;">
-            <div class="card-header text-white">
-              Equipment
-              <button type="button" class="btn btn-primary float-right" [routerLink]="['/manageEquipment', story.storyID]">Edit</button>
+          <div class="card card-head mt-4" style="width: 18rem;">
+            <div class="card-header">
+              <div class="d-flex justify-content-between">
+                <h5>Equipment</h5>
+                <button type="button" class="btn btn-primary" [routerLink]="['/manageEquipment', story.storyID]">Edit</button>
+              </div>
             </div>
             <div *ngIf="equipment.length">
               <ul class="list-group list-group-flush ">
-                <li class="list-group-item d-inline color-lightgrey" *ngFor="let equip of equipment">{{ equip.equipName }} </li>
+                <li class="list-group-item d-inline color-lightgrey" *ngFor="let equip of equipment">{{ equip.equipName
+                  }} </li>
 
               </ul>
             </div>
             <div *ngIf="!equipment.length">
-              <p>There is no equipment for this story.</p>
+              <p class="text-center">There is no equipment for this story.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-
