--- a/Angular Project/src/app/landingpage/landingpage.component.css
+++ b/Angular Project/src/app/landingpage/landingpage.component.css
@@ -1,8 +1,8 @@
 #grad {
   /* background-image: linear-gradient(to bottom right, rgb(170, 170, 170), rgb(78, 78, 255)); */
   background-image: './../../assets/new_room.png';
-  height: 90vh;
-  width: 100vw;
+  height: 100%; /*90vh;*/
+  width: 100%; /*100vw;*/
 }
 
 .overlay {
