--- a/Angular Project/src/app/account-creation/account-creation.component.css
+++ b/Angular Project/src/app/account-creation/account-creation.component.css
@@ -25,12 +25,17 @@
 .background{
   background-repeat: no-repeat;
   height: 100%;
+  width: 100%;
   }
 
 
 #border-element {
   border-radius: 5px;
   width: 20em;
+}
+
+.btn-success {
+  background-color: #3AAFA9;
 }
 
   /* .container{
