More columns added to an-story table

--- a/Angular Project/src/app/anchor/anchor.component.html
+++ b/Angular Project/src/app/anchor/anchor.component.html
@@ -8,7 +8,7 @@
 
     <div class="container">
       <div [ngSwitch]="myStories?.length">
-        <div *ngSwitchCase=0><h2 class="lead mt-4 text-light" >No stories claimed. Click the button above to see available stories.</h2></div>
+        <div *ngSwitchCase=0><h2 class="lead mt-4" >No stories claimed. Click the button above to see available stories.</h2></div>
       </div>
     </div>
 
