--- a/Angular Project/src/app/an-story/an-story.component.html
+++ b/Angular Project/src/app/an-story/an-story.component.html
@@ -6,7 +6,7 @@
         <div class="container col-xs-6 p-6">
           <h2 class="sub-header">Claimed Stories</h2>
           <div [ngSwitch]="myStories?.length">
-            <div *ngSwitchCase=0>
+            <div *ngSwitchCase=0 class="mb-4">
               No stories claimed.
             </div>
             <table *ngSwitchDefault class="table">
@@ -56,7 +56,7 @@
         <div class="container col-xs-6">
           <h2 class="sub-header">Available Stories</h2>
           <div [ngSwitch]="availableStories?.length">
-            <div *ngSwitchCase=0>
+            <div *ngSwitchCase=0 class="mt-2">
               No stories available.
             </div>
             <table *ngSwitchDefault class="table table-striped table-condensed">
