--- a/Angular Project/src/app/story/story.component.html
+++ b/Angular Project/src/app/story/story.component.html
@@ -1,10 +1,15 @@
 <div class="mt-3" *ngIf="vehicles && experts && equipment">
-  <div class="storycard card">
+  <div class="storycard card" id="whole-card">
     <div class="card-header clearfix" id="card-head">
       <h4 class="card-title text-light"> {{story.storyTopic}}</h4>
     </div>
     <div class="card-body text-dark">
-      <label class="">Story Details</label>
+      <label class="">
+        <h5>
+            Story Details
+        </h5>
+
+      </label>
       <ul>
         <li>
           <p class="card-text">Date: {{story.storyDate}}</p>
@@ -21,7 +26,7 @@
       <div class="row">
           <div class="col-md-4">
               <div class="card card-head mt-4" style="width: 18rem;">
-                <div class="card-header">
+                <div class="card-header bg-our-light">
                   <div class="d-flex justify-content-between">
                     <h5>Vehicles</h5>
                     <button type="button" class="btn btn-primary" [routerLink]="['/manageVehicles', story.storyID]">Edit</button>
@@ -43,7 +48,7 @@
 
         <div class="col-md-4">
           <div class="card card-head mt-4" style="width: 18rem;">
-            <div class="card-header ">
+            <div class="card-header bg-our-light">
               <div class="d-flex justify-content-between">
                 <h5>Experts</h5>
                 <button type="button" class="btn btn-primary" [routerLink]="['/manageExperts', story.storyID]">Edit</button>
@@ -63,7 +68,7 @@
         </div>
         <div class="col-md-4">
           <div class="card card-head mt-4" style="width: 18rem;">
-            <div class="card-header">
+            <div class="card-header bg-our-light">
               <div class="d-flex justify-content-between">
                 <h5>Equipment</h5>
                 <button type="button" class="btn btn-primary" [routerLink]="['/manageEquipment', story.storyID]">Edit</button>
