--- a/Angular Project/src/app/an-story/an-story.component.html
+++ b/Angular Project/src/app/an-story/an-story.component.html
@@ -6,7 +6,7 @@
         <div class="container col-xs-6 p-6">
           <h2 class="sub-header">Claimed Stories</h2>
           <div [ngSwitch]="myStories?.length">
-            <div *ngSwitchCase=0 class="mb-4">
+            <div *ngSwitchCase=0 class="mb-4 mt-4 ml-3">
               No stories claimed.
             </div>
             <table *ngSwitchDefault class="table">
@@ -56,7 +56,7 @@
         <div class="container col-xs-6">
           <h2 class="sub-header">Available Stories</h2>
           <div [ngSwitch]="availableStories?.length">
-            <div *ngSwitchCase=0 class="mt-2">
+            <div *ngSwitchCase=0 class="mb-4 mt-4 ml-3">
               No stories available.
             </div>
             <table *ngSwitchDefault class="table table-striped table-condensed">
@@ -100,7 +100,7 @@
                 </tr>
               </tbody>
             </table>
-            <button (click)="returnToDash()" class="btn btn-primary font-weight-bold text-white float-right w-25">Return
+            <button (click)="returnToDash()" class="btn btn-primary font-weight-bold float-right w-25">Return
               to Dashboard</button>
           </div>
         </div>
