--- a/Angular Project/src/app/vehicle/vehicle.component.html
+++ b/Angular Project/src/app/vehicle/vehicle.component.html
@@ -93,7 +93,7 @@
       </mat-table>
     </div>
   </div>
-  <button class="btn btn-primary font-weight-bold text-white float-right w-25" (click)="returnToDash()">Return
+  <button class="btn btn-primary font-weight-bold" (click)="returnToDash()">Return
     to Dashboard</button>
 </div>
 </div>
