--- a/Angular Project/src/app/navbar/navbar.component.html
+++ b/Angular Project/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
  <nav class="navbar">
     <a class="navbar-brand very-light-blue" id="title" href="javascript:void(0);" (click)="navToHome()">Anchor Management</a>
     <div class="dropdown show" *ngIf="user" >
-        <a class="btn btn-link dropdown-toggle very-light-blue" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="btn btn-link dropdown-toggle very-light-blue mr-5 pr-5" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             {{ user.userName }}
         </a>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
