--- a/Angular Project/src/app/story/story.component.css
+++ b/Angular Project/src/app/story/story.component.css
@@ -33,7 +33,8 @@
 
   #whole-card {
     border-radius: 5px 5px 0px 0px;
-    border: none;
+    border-color: #3AAFA9;
+    border-bottom: none;
   }
 
   .bg-our-light {
