--- a/Angular Project/src/app/story/story.component.html
+++ b/Angular Project/src/app/story/story.component.html
@@ -41,7 +41,11 @@
                   </ul>
                 </div>
                 <div *ngIf="!vehicles.length">
-                  <p class="text-center">There are no vehicles for this story.</p>
+                    <ul class="list-group list-group-flush ">
+                        <li class="list-group-item">
+                            No vehicles for this story
+                        </li>
+                      </ul>
                 </div>
               </div>
             </div>
@@ -62,7 +66,11 @@
               </ul>
             </div>
             <div *ngIf="!experts.length">
-              <p class="text-center">There are no experts for this story.</p>
+                <ul class="list-group list-group-flush ">
+                    <li class="list-group-item">
+                        No experts for this story
+                    </li>
+                  </ul>
             </div>
           </div>
         </div>
@@ -83,7 +91,11 @@
               </ul>
             </div>
             <div *ngIf="!equipment.length">
-              <p class="text-center">There is no equipment for this story.</p>
+                <ul class="list-group list-group-flush ">
+                    <li class="list-group-item">
+                        No equipment for this story
+                    </li>
+                  </ul>
             </div>
           </div>
         </div>
